Orgs/BacenOlinda/force-app/main/default/objects/Stock__c/fields/Company_c__c.field-meta.xml
<CustomField>
    <fullName>Company_c__c</fullName>
    <label>Company__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>