Orgs/BacenOlinda/force-app/main/default/objects/Stock__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>CurrencyIsoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>