Orgs/BacenOlinda/force-app/main/default/objects/Stock__c/fields/Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>Quantity_c__c</fullName>
    <label>Quantity__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>