Orgs/BacenOlinda/force-app/main/default/objects/Stock__c/fields/Value_c__c.field-meta.xml
<CustomField>
    <fullName>Value_c__c</fullName>
    <label>Value__c</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>